force-app/main/default/objects/Product2/fields/BatterySpec__c.field-meta.xml
<CustomField>
    <fullName>BatterySpec__c</fullName>
    <label>BatterySpec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>