force-app/main/default/objects/Product2/fields/Drive_Train__c.field-meta.xml
<CustomField>
    <fullName>Drive_Train__c</fullName>
    <label>Drive Train</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>FWD</fullName>
            </value>
            <value>
                <fullName>RWD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>