force-app/main/default/objects/Product2/fields/FastChargeMin__c.field-meta.xml
<CustomField>
    <fullName>FastChargeMin__c</fullName>
    <label>FastChargeMin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>