force-app/main/default/objects/Product2/fields/Feature1Desc__c.field-meta.xml
<CustomField>
    <fullName>Feature1Desc__c</fullName>
    <label>Feature1Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>