force-app/main/default/objects/Product2/fields/Feature1Title__c.field-meta.xml
<CustomField>
    <fullName>Feature1Title__c</fullName>
    <label>Feature1Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>