force-app/main/default/objects/Product2/fields/Feature2Desc__c.field-meta.xml
<CustomField>
    <fullName>Feature2Desc__c</fullName>
    <label>Feature2Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>