force-app/main/default/objects/Product2/fields/Feature2Title__c.field-meta.xml
<CustomField>
    <fullName>Feature2Title__c</fullName>
    <label>Feature2Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>