force-app/main/default/objects/Product2/fields/Feature3Desc__c.field-meta.xml
<CustomField>
    <fullName>Feature3Desc__c</fullName>
    <label>Feature3Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>