force-app/main/default/objects/Product2/fields/Feature3Title__c.field-meta.xml
<CustomField>
    <fullName>Feature3Title__c</fullName>
    <label>Feature3Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>