force-app/main/default/objects/Product2/fields/PeakPowerBhp__c.field-meta.xml
<CustomField>
    <fullName>PeakPowerBhp__c</fullName>
    <label>PeakPowerBhp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>