force-app/main/default/objects/Product2/fields/RangeKm__c.field-meta.xml
<CustomField>
    <fullName>RangeKm__c</fullName>
    <label>RangeKm</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>