force-app/main/default/objects/Product2/fields/StartingPrice__c.field-meta.xml
<CustomField>
    <fullName>StartingPrice__c</fullName>
    <label>StartingPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>