force-app/main/default/objects/Product2/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>