force-app/main/default/objects/Product2/fields/Test_Drive_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available for Test Drive</label>
    <type>Checkbox</type>
</CustomField>