force-app/main/default/objects/Product2/fields/ZeroToHundred__c.field-meta.xml
<CustomField>
    <fullName>ZeroToHundred__c</fullName>
    <label>ZeroToHundred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>